--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,3 +88,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  assets:
+    - assets/img/people.jpg
+
+  fonts:
+    - family: Lato 
+      fonts:
+        - asset: fonts/Lato-Regular.ttf
