--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,10 @@ flutter:
 
   assets:
     - assets/img/people.jpg
+    - assets/img/beach_palm.jpeg
+    - assets/img/mountain_stars.jpeg
+    - assets/img/beach.jpeg
+    - assets/img/
 
   fonts:
     - family: Lato 
